# jgv

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGraphviz.cmake
hotrod/: docker-compose.yml
src/: CMakeLists.txt  main.cpp  qml.qrc  qtquickcontrols2.conf
src/components/: CMakeLists.txt  flat_logs.cpp  flat_logs.h  helpers.cpp  helpers.h  service_map.cpp  service_map.h  span_model.cpp  span_model.h  tag_model.cpp  tag_model.h  trace.h  trace_downloader.cpp  trace_downloader.h
src/graph/: CMakeLists.txt  process.h  span.h  tag.h  trace.cpp  trace.h
src/qml/: DownloadTraceScreen.qml  FlatLogs.qml  ServiceMap.qml  TraceScreen.qml  main.qml  pages.js  style.js
src/qml/components/: ErrorDialog.qml
src/services/: CMakeLists.txt  log_service.cpp  log_service.h  registry.cpp  registry.h
src/trace/: CMakeLists.txt  process.h  span.cpp  span.h  tag.h  trace.cpp  trace.h
tests/: CMakeLists.txt  graph.cpp  parser.cpp
tests/testdata/: hotroad_rachel.json
